force-app/main/default/objects/Stage_Tracking__c/Stage_Tracking__c.object-meta.xml
<CustomObject>
    <label>Stage Tracking</label>
    <nameField>
        <label>Stage Tracking  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>