force-app/main/default/objects/Stage_Tracking__c/fields/Analytics_Model__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytics Model</label>
    <referenceTo>Analytics_Model__c</referenceTo>
    <relationshipLabel>Stage Tracking</relationshipLabel>
    <relationshipName>Stage_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>