force-app/main/default/objects/Stage_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stage Tracking</relationshipLabel>
    <relationshipName>Stage_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>