force-app/main/default/objects/Stage_Tracking__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>