force-app/main/default/objects/Stage_Tracking__c/fields/Time_Spent_in_Info_Needed__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_Info_Needed__c</fullName>
    <label>Time Spent in Info Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>