force-app/main/default/objects/Stage_Tracking__c/fields/Time_Spent_in_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_To_Do__c</fullName>
    <label>Time Spent in To Do</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>