force-app/main/default/objects/Stage_Tracking__c/fields/Time_Spent_in_Validation__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_Validation__c</fullName>
    <label>Time Spent in Validation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>